  CHANGES IN BayesFactor VERSION 0.9.11

CHANGES
  * Added approximation for t test in case of large t
  * Made some error messages clearer
  * Use callbacks at least once in all cases
  * Fix bug preventing continuous interactions from showing in regression Gibbs sampler

  CHANGES IN BayesFactor VERSION 0.9.10-2

CHANGES
  * Removed "see also" to package BAS, due to its being archived

  CHANGES IN BayesFactor VERSION 0.9.10-1

CHANGES
  * Fixed issue causing Solaris build to fail

  CHANGES IN BayesFactor VERSION 0.9.10

CHANGES
  *  Fixed bug in model enumeration code in generalTestBF (affected "withmain" analyses with neverExclude argument)
  *  Various bug fixes
  *  Analyses are more error tolerant (problem analyses will yield NA in BayesFactor object)
  *  Fixed some typos in citation information
  *  Improved numerical stability of proportional error estimates

  CHANGES IN BayesFactor VERSION 0.9.9

CHANGES
  *  Added "simple" argument to ttest.tstat, oneWayAOV.Fstat, and linearReg.R2stat; when TRUE, return only the Bayes factor (not the log BF and error)
  *  When sampling Bayes factors, recompute() now increases the precision of BayesFactor objects, rather than simply recomputing them. Precision from new samples is added
  *  Added test for single proportion; see proportionBF()
  *  Added support for contingency tables; see contingencyBF()
  *  Added Hraba and Grant (1970) data set; see ?raceDolls
  *  Added model.matrix method for BayesFactor objects; allows for extracting the design matrix used for an analysis
  *  recompute() now has multicore and callback support, as intended
  *  Refactored t test and meta-t test code
  *  Moved many backend functions to Rcpp from R C API
  *  t test samplers now sample from interval null hypotheses and point null hypotheses where appropriate
  *  fixed bug in in meta t test sampler which wouldn't allow sampling small numbers of MCMC samples


  CHANGES IN BayesFactor VERSION 0.9.8

CHANGES